# agentic-trading

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.cursor/rules/: 00-project-context.mdc  10-trading-safety.mdc  20-research-rigor.mdc  30-ai-native-workflow.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
configs/: paper.yaml
configs/strategies/: mvp.yaml
docs/: ARCHITECTURE.md  GLOSSARY.md  LANDSCAPE.md  MILESTONES.md  PAPER-TRADING-INTEGRATION.md  PRODUCTION-READINESS.md  PROJECT_CHARTER.md
docs/decisions/: 0001-llm-positioning-hybrid.md  0002-leverage-oss-vs-build.md  0003-backtest-live-parity.md  0004-tech-stack.md  0005-evaluation-and-anti-overfitting.md  0006-runtime-execution-and-safety.md  0007-experimentation-and-monitoring.md  0008-production-roadmap-and-oss-adoption.md  0009-offline-first-productionization.md  0010-architecture-hardening.md  0011-execution-ordering-and-buying-power.md  README.md  adr-template.md
docs/experiments/: README.md  experiment-template.md
docs/runbooks/: incident-playbook.md
docs/specs/: README.md  backtest-eval.md  llm-signal.md  strategy-hypothesis.md
docs/tech-specs/: EVAL-framework.md  README.md  (+10 more)
examples/: 01_offline_backtest.py  02_signal_extraction.py  03_paper_loop.py  04_signal_eval.py  05_anti_overfitting.py  06_go_live_governance.py  07_composition_root.py  README.md  plot_equity.py
(+137 files in other folders)
